# sbahn-stuttgart-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  reproduce_error.py
.github/workflows/: daily.yml  hourly.yml  pipeline.yml  workflow.yaml
01_data/01_raw/: Stationen_S-Bahnnetz_Stuttgart.csv
01_data/01_raw/API/: 241208_21.csv  241208_22.csv  241208_23.csv  241209_00.csv  241209_02.csv  241209_04.csv  241209_05.csv  241209_06.csv  241209_21.csv  241209_22.csv  241209_23.csv  241210_00.csv  241210_01.csv  241210_02.csv  241210_03.csv  241210_04.csv  241210_05.csv  241210_06.csv  241210_07.csv  241210_08.csv  241210_09.csv  241210_10.csv  241210_11.csv  241210_12.csv  241210_13.csv  (+13161 more)
01_data/02_intermediate/: 241208.csv  241208_cleaned.csv  241209.csv  241210.csv  241211.csv  241212.csv  241213.csv  241218.csv  250105.csv  250202.csv  250215.csv  250216.csv  250316.csv  250323.csv  250601.csv  250615.csv  250619.csv  250622.csv  250629.csv  250706.csv  250726.csv  250727.csv  250728.csv  250729.csv  250730.csv  250731.csv  250801.csv  250802.csv  250803.csv  250804.csv  250805.csv  250806.csv  250807.csv  250808.csv  250809.csv  250810.csv  250811.csv  250812.csv  250813.csv  250814.csv  (+235 more)
01_data/03_processed/: combined.csv
Geodaten/src/: analyze_data.py  webmap.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
src/: 01_fetch_data.py  02_clean_data.py  03_combine_daily.py  04_append_to_combined.py  api.py  create_static_html.py  dashboard.py  monitor.py  run_pipeline.py
tests/: test_api_bottlenecks.py  test_api_network.py
(+14 files in other folders)
