[tool.poetry]
name = "sbahn-stuttgart-data-pipeline"
version = "0.1.0"
description = ""
authors = ["raphaelkach <wi23146@lehre.dhbw-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
dash = "2.11.1"
plotly = "5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"