[tool.poetry]
name = "sbahn-stuttgart-data-pipeline"
version = "0.1.0"
description = ""
authors = ["raphaelkach <wi23146@lehre.dhbw-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
dash = "2.11.1"
plotly = "5.15.0"
geopandas = "^1.0.1"
shapely = "^2.0.6"
fiona = "^1.10.1"
pyproj = "^3.7.0"
folium = "^0.19.2"
setuptools = "^80.9.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pyarrow = "^19.0.0"
duckdb = "^1.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"